--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,12 +45,6 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.PAT }}
-      # This step uses [docker/metadata-action](https://github.com/docker/metadata-action#about) to extract tags and labels that will be applied to the specified image. The `id` "meta" allows the output of this step to be referenced in a subsequent step. The `images` value provides the base name for the tags and labels.
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
 
       - name: Build and push Docker image
@@ -58,7 +52,7 @@ jobs:
         with:
           context: deployments/.
           push: true
-          tags: ${{ steps.meta.outputs.tags }}-deployments-${{ github.sha }}
+          tags: ghcr.io/piyushsingh-zs/${{ env.IMAGE_NAME }}:deployments-${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
 
   build-and-push-go-image:
