--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: piyushsingh-zs/test-enc
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
