--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,75 +13,77 @@ env:
 jobs:
 
   changed-files:
-    outputs:
-      files: ${{ steps.files.outputs.all }}
-    runs-on: ubuntu-latest
-
-    steps:
-      - id: files
-        uses: jitterbit/get-changed-files@v1
-      - run: |
-          for added_modified_file in ${{ steps.files.outputs.all }}; do
-            echo ${added_modified_file}
-          done
-
-  build-and-push-deployment-image:
-    needs: changed-files
-    if: ${{ contains(needs.changed-files.outputs.files, 'deployments/') }}
 
     runs-on: ubuntu-latest
-    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
-    permissions:
-      contents: read
-      packages: write
-      #
+    container:
+      image: ghcr.io/piyushsingh-zs/test-enc:go-b5c466121b96ff7e2bff80338d06bdd14473c50c
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+      - name: Check out Code
+        uses: actions/checkout@v3
+
+
+
+      - name: Get dependencies
+        run: |
+          go mod download
+
+      - name: Test
+        run: |
+          mkdir -p temp
+          go test ./... -count=1 -v -coverprofile temp/cover.out -coverpkg=./...
+          cat temp/cover.out | grep -v "mock_interface" | grep -v "migrations" > temp/coverage.out
+
+      - name: Coverage report
+        run: |
+          go tool cover -func=temp/coverage.out | tee temp/c.out
+
+      - name: Generate and Commit Coverage Badge
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
+        run: |
+          go install github.com/AlexBeauchemin/gobadge@latest
+          gobadge -filename=temp/c.out -target=$(pwd)/README.md
+          git config --local user.email "action@github.com" && git config --local user.name "GitHub-Action"
+          git diff --quiet --exit-code README.md || git commit README.md -m "updating coverage in README.md"
+
+      - name: Push Coverage Badge
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
+        uses: ad-m/github-push-action@master
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.PAT }}
+          github_token: ${{ github.token }}
+          branch: ${{github.ref}}
 
+      - name: Coverage Quality Gate
+        run: |
+          echo "Quality Gate: checking test coverage is above threshold ..."
+          echo "Threshold             : $TEST_COVERAGE_THRESHOLD %"
+          totalCoverage=`go tool cover -func=temp/coverage.out | grep 'total:' | grep -Eo '[0-9]+\.[0-9]+'`
+          echo "Current test coverage : $totalCoverage %"
+          if (( $(echo "$totalCoverage $TEST_COVERAGE_THRESHOLD" | awk '{print ($1 >= $2)}') )); then
+              echo "OK"
+          else
+              echo "Current test coverage is below threshold. Please add more unit tests or adjust threshold to a lower value."
+              echo "Failed"
+              exit 1
+          fi
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        with:
-          context: deployments/.
-          push: true
-          tags: ghcr.io/${{ env.IMAGE_NAME }}:deployments-${{ github.sha }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-  build-and-push-go-image:
-    needs: changed-files
-    if: ${{ contains(needs.changed-files.outputs.files, 'go/') }}
-
+  code_quality:
+    name: 🎖 Code Quality
+    container:
+      image: ghcr.io/piyushsingh-zs/test-enc:go-b5c466121b96ff7e2bff80338d06bdd14473c50c
     runs-on: ubuntu-latest
-    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
-    permissions:
-      contents: read
-      packages: write
-      #
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+
+      - name: Setup Git
+        run: |
+          go mod download
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.PAT }}
+          version: v1.54.1
+          args: --timeout 10m
 
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        with:
-          context: deployments/.
-          push: true
-          tags: ghcr.io/${{ env.IMAGE_NAME }}:go-${{ github.sha }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: PAT=${{ secrets.PAT }}
