--- a/.github/workflows/buidl-and-push.yaml
+++ b/.github/workflows/buidl-and-push.yaml
@@ -19,24 +19,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - id: files
-        run: |
-          # Extract the tag name from the GitHub ref
-          TAG_NAME=$(echo "${{ github.ref }}" | sed 's/refs\/tags\///')
-          
-          # Check out the specific tag
-          git checkout "tags/${TAG_NAME}"
-          
-          # Get the list of changed files
-          CHANGED_FILES=$(git diff --name-only HEAD^)
-          
-          # Print the list of changed files
-          echo "Changed files for tag ${TAG_NAME}:"
-          echo "$CHANGED_FILES"
-
+        uses: jitterbit/get-changed-files@${{ github.sha }}
+      - run: |
+          for added_modified_file in ${{ steps.files.outputs.all }}; do
+            echo ${added_modified_file}
+          done
       - id: version
         run: |
           echo "version=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
