--- a/.github/workflows/buidl-and-push.yaml
+++ b/.github/workflows/buidl-and-push.yaml
@@ -19,8 +19,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - id: files
-        uses: jitterbit/get-changed-files@${{ github.sha }}
+        uses: jitterbit/get-changed-files@v1
       - run: |
           for added_modified_file in ${{ steps.files.outputs.all }}; do
             echo ${added_modified_file}
