--- a/.github/workflows/buidl-and-push-deployments.yaml
+++ b/.github/workflows/buidl-and-push-deployments.yaml
@@ -1,4 +1,4 @@
-name: Build and Push Base Images
+name: Build and Push Deployments Images
 
 on:
   push:
@@ -12,20 +12,7 @@ env:
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
 
-  changed-files:
-    outputs:
-      files: ${{ steps.files.outputs.all }}
-      version: ${{ steps.version.out.version }}
-    runs-on: ubuntu-latest
-
-    steps:
-      - id: version
-        run: |
-          echo "version=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-
   build-and-push-deployment-image:
-    needs: changed-files
-
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
@@ -35,6 +22,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Extract Release Tag
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -51,20 +41,5 @@ jobs:
         with:
           context: deployments/.
           push: true
-          tags: ghcr.io/${{ env.IMAGE_NAME }}:${{ needs.changed-files.outputs.version}}
+          tags: ghcr.io/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  build-and-push-go-image:
-    needs: changed-files
-    if: ${{ contains(needs.changed-files.outputs.files, 'go/') }}
-
-    runs-on: ubuntu-latest
-    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
-    permissions:
-      contents: read
-      packages: write
-      #
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
