--- a/.github/workflows/buidl-and-push-deployments.yaml
+++ b/.github/workflows/buidl-and-push-deployments.yaml
@@ -2,7 +2,9 @@ name: Build and Push Deployments Images
 
 on:
   push:
-    tags: ["deployments*"]
+    tags:
+      - "go-*"
+      - "deployments-*"
 
 
 env:
@@ -12,7 +14,7 @@ env:
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
 
-  build-and-push-deployment-image:
+  build-and-push-image:
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
@@ -25,6 +27,14 @@ jobs:
 
       - name: Extract Release Tag
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Extract directory
+        id: extract_string
+        run: |
+          full_string="go-1"
+          IFS='-' read -ra parts <<< "$full_string"
+          echo "Extracted string: ${parts[0]}"
+          echo "directory=${parts[0]}">> $GITHUB_ENV
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -39,7 +49,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: deployments/.
+          context: ${{ env.directory }}/.
           push: true
           tags: ghcr.io/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
