--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,6 @@ jobs:
           echo ${{ env.branch_flag }} 
           echo ${{ env.event_flag }}
 
-      - uses: actions/upload-artifact@v3
+      - name: test45
         if: ${{ env.branch_flag }} && ${{ env.event_flag }}
-        name: upload zipped build and node modules
         run: echo "should run"
