--- a/charts/cron-job/templates/cronJob.yaml
+++ b/charts/cron-job/templates/cronJob.yaml
@@ -64,8 +64,10 @@ spec:
               {{- end }}
               imagePullPolicy: IfNotPresent
               ports:
+                {{- if and .Values.metricsPort (ne (int .Values.metricsPort) 0) }}
                 - name: metrics-port
                   containerPort: {{ .Values.metricsPort }}
+                {{- end }}
               envFrom:
                 {{- range $i, $name := .Values.envFrom.configmaps }}
                 - configMapRef:
