--- a/charts/mysql/values.yaml
+++ b/charts/mysql/values.yaml
@@ -1,4 +1,4 @@
-mysqlRootPassword: "hello"
+mysqlRootPassword: pass1
 updateStrategy:
   type: RollingUpdate
 
@@ -14,3 +14,5 @@ resources:
   limits:
     cpu: "1500m"
     memory: "1Gi"
+
+services:
