--- a/charts/redis/templates/configmap.yaml
+++ b/charts/redis/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ .Values.name }}-configmap"
+  name: "{{ .Values.name }}-redis-configmap"
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/component: master
@@ -18,5 +18,3 @@ data:
     pidfile /var/run/redis_6379.pid
     loglevel notice
     logfile ""
-  # slave.conf: |
-  #   slaveof redis-0.redis 6379
