--- a/charts/redis/templates/headless-svc.yaml
+++ b/charts/redis/templates/headless-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Values.name }}-headless-service"
+  name: "{{ .Values.name }}-redis-headless-service"
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/component: master
