--- a/charts/cron-job/templates/cronJob.yaml
+++ b/charts/cron-job/templates/cronJob.yaml
@@ -77,20 +77,18 @@ spec:
                 - secretRef:
                     name: {{ $name }}
                  {{- end }}
-                {{- if .Values.datastores.mysql }}
+                {{- if and .Values.datastores .Values.datastores.mysql }}
                 {{- range $i, $k := .Values.datastores.mysql }}
                 - configMapRef:
-                    name: {{ $k.name }}-{{ $k.database }}-{{ $.Release.Name}}-mysql-configmap
+                    name: {{ $k.datastore }}-{{ $k.database }}-{{ $.Release.Name}}-mysql-configmap
                 - secretRef:
-                    name: {{ $k.name }}-{{ $k.database }}-{{ $.Release.Name}}-mysql-database-secret
+                    name: {{ $k.datastore }}-{{ $k.database }}-{{ $.Release.Name}}-mysql-database-secret
                  {{- end }}
                  {{- end }}
-                 {{- if .Values.datastores.redis }}
-                 {{- range .Values.datastores.redis }}
+                 {{- if and .Values.datastores .Values.datastores.redis }}
+                 {{- range $i, $k := .Values.datastores.redis }}
                 - configMapRef:
-                    name: {{ .name }}-configmap
-                - secretRef:
-                    name: {{ .name }}-database-secret
+                    name: {{ $k.datastore }}-redis-service-configmap
                  {{- end }}
                  {{- end }}
               env:
