add chart for postgre

--- a/charts/postgres/templates/init-script-config-map.yaml
+++ b/charts/postgres/templates/init-script-config-map.yaml
@@ -6,26 +6,25 @@ metadata:
   namespace: {{ $.Release.Namespace }}
 data:
   db-init.sql: |
+    REVOKE ALL ON SCHEMA public FROM PUBLIC;
+    DO
+    $do$
+    BEGIN
+    IF NOT EXISTS (
+    SELECT FROM pg_catalog.pg_roles  -- SELECT list can be empty for this
+    WHERE  rolname = '{{ $service.name }}_user') THEN
   
-    CREATE EXTENSION IF NOT EXISTS dblink;
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_database WHERE datname = '{{ $service.database }}') THEN
-        PERFORM dblink_exec('dbname=postgres', 'CREATE DATABASE {{ $service.database }}');
-      END IF;
-    END $$;
+    CREATE USER "{{ $service.name }}_user" WITH ENCRYPTED PASSWORD '{{ $service.password }}';
+    GRANT CONNECT, CREATE ON DATABASE "{{ $service.database }}" TO "{{ $service.name }}_user";
+    GRANT CREATE, USAGE ON SCHEMA public TO "{{ $service.name }}_user";
+    ALTER DEFAULT PRIVILEGES FOR USER postgres IN SCHEMA public GRANT INSERT, REFERENCES, SELECT, UPDATE, DELETE, TRUNCATE ON TABLES TO "{{ $service.name }}_user";
+    ALTER DEFAULT PRIVILEGES FOR USER postgres IN SCHEMA public GRANT SELECT, UPDATE ON SEQUENCES TO "{{ $service.name }}_user";
+    ELSE
+    ALTER USER "{{ $service.name }}_user" PASSWORD '{{ $service.password }}';
+    END IF;
 
-    \connect {{ $service.database }}
-
-    DO $$ BEGIN
-      IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = '{{ $service.name }}_user') THEN
-        CREATE ROLE {{ $service.name }}_user WITH LOGIN PASSWORD '{{ $service.password }}';
-      END IF;
-    END $$;
-
-    ALTER ROLE {{ $service.name }}_user CREATEDB;
-    GRANT CONNECT ON DATABASE {{ $service.database }} TO {{ $service.name }}_user;
-    GRANT USAGE, SELECT, INSERT, UPDATE, DELETE, REFERENCES, TRIGGER ON ALL TABLES IN SCHEMA public TO {{ $service.name }}_user;
-    GRANT USAGE, SELECT, UPDATE ON ALL SEQUENCES IN SCHEMA public TO {{ $service.name }}_user;
-    GRANT EXECUTE ON ALL FUNCTIONS IN SCHEMA public TO {{ $service.name }}_user;
+  
+    END
+    $do$;
 ---
 {{- end }}
