--- a/charts/mysql/values.yaml
+++ b/charts/mysql/values.yaml
@@ -1,10 +1,6 @@
-mysqlRootPassword:
-updateStrategy:
-  type: RollingUpdate
+postgresRootPassword:
 
-diskSize: "10Gi"
-
-image: mysql:8.0
+image: postgres:10.1
 
 # Resource configuration
 resources:
@@ -14,5 +10,10 @@ resources:
   limits:
     cpu: "1500m"
     memory: "1Gi"
+
+diskSize: "10Gi"
+
+updateStrategy:
+  type: RollingUpdate
 
 services:
