--- a/charts/redis/templates/configmap.yaml
+++ b/charts/redis/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ .Values.name }}-redis-configmap"
+  name: "{{ .Release.Name }}-redis-configmap"
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/component: master
