--- a/charts/redis/templates/headless-svc.yaml
+++ b/charts/redis/templates/headless-svc.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Values.name }}-redis-headless-service"
+  name: "{{ .Release.Name }}-redis-headless-service"
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/component: master
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   clusterIP: None
   ports:
   - name: tcp-redis
-    port: {{ .Values.service.port }}
-    targetPort: {{ .Values.service.targetPort }}
+    port: 6379
+    targetPort: 6379
   selector:
-    app.kubernetes.io/component: master
+    app: {{ .Release.Name }}-redis
