--- a/charts/redis/templates/statefulset.yaml
+++ b/charts/redis/templates/statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
     app: {{ .Release.Name }}-redis
 spec:
   replicas: 1
-  serviceName: "{{ .Values.name }}-redis-headless-service"
+  serviceName: "{{ .Release.Name }}-redis-headless-service"
   selector:
     matchLabels:
       app.kubernetes.io/part-of: redis
@@ -41,26 +41,24 @@ spec:
               command:
                 - redis-cli
                 - ping
-            initialDelaySeconds: {{ .Values.master.livenessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.master.livenessProbe.periodSeconds }}
-            timeoutSeconds: {{ add1 .Values.master.livenessProbe.timeoutSeconds }}
-            successThreshold: {{ .Values.master.livenessProbe.successThreshold }}
-            failureThreshold: {{ .Values.master.livenessProbe.failureThreshold }}
+            initialDelaySeconds: 30
+            periodSeconds: 10
           readinessProbe:
             exec:
               command:
                 - redis-cli
                 - ping
-            initialDelaySeconds: {{ .Values.master.readinessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.master.readinessProbe.periodSeconds }}
-            timeoutSeconds: {{ add1 .Values.master.readinessProbe.timeoutSeconds }}
-            successThreshold: {{ .Values.master.readinessProbe.successThreshold }}
-            failureThreshold: {{ .Values.master.readinessProbe.failureThreshold }}
+            initialDelaySeconds: 5
+            periodSeconds: 10
 
 
           volumeMounts:
             - name: {{.Release.Name }}-redis-persistent-storage
               mountPath: /var/lib/redis
+      volumes:
+        - name: redis-config
+          configMap:
+            name: "{{ .Release.Name }}-redis-configmap"
   volumeClaimTemplates:
     - metadata:
         name: {{.Release.Name }}-redis-persistent-storage
