--- a/charts/redis/values.yaml
+++ b/charts/redis/values.yaml
@@ -3,7 +3,7 @@ updateStrategy:
 
 diskSize: "10Gi"
 
-image:
+image: "redis:6.2.13"
 
 # Resource configuration
 resources:
@@ -13,5 +13,3 @@ resources:
   limits:
     cpu: "1500m"
     memory: "1Gi"
-
-services:
