--- a/charts/postgres/templates/statefulset.yaml
+++ b/charts/postgres/templates/statefulset.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ $.Release.Name }}-postgres
+  name: {{ .Release.Name }}-postgres
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app.kubernetes.io/part-of: postgres
