--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: 1.59.x
+          version: 1.59.1
           args: --timeout 8m
           skip-pkg-cache: true
           skip-build-cache: true
